          users to see what's new in SpecTcl 3.1

Pre-released April 26, 2007

Pre-3.
 
Week of April 30, 2007
        - Added observer capability to all dictionaries types.  This will
          allow support of traces on e.g. spectrum dictionary.
        - Added tests for dictionary observers and the observer manager
          helper classes.
        - Added capability to add/remove observers from the spectrum dictionary
          to CHistogrammer.
        - Added API entries to add/remove spectrum observers.
        - Added spectrum -trace command.
        - Added docs for the -trace command.
        - Made Xamine's Xamine_DrawFittedString also attempt truncation
          rather than just leaving a string blank if it does not fit.
          e.g. a title that is:
          "this is a very long string that does not fit"
          could get rendered/displayed as:
          "this is a very lo..."  if that's all the room there is
        - Port in the jumbo buffer decoder and put it in scriptable unpacker
            too
Week of May 7, 2007
        - BZ 295 - add support for splitting/joining filter files.  Note that
          cat can join perfectly well, so this reduces to writing a program
	  filtsplit that can split.  We'll choose to write:
		filtspilt --size blocks_per_file --output stem_name  input_file
          blocks_per_file - number of input filter blocks per output file.
          stem_name       - Is the stem of the split output files which 
                            will have names like stem_name_nnn.flt
          input_file      - Is the input file to split.
       - Changed swrite format level to 3: Make NSCLAsciiFormatter able to read:
         rev 2,1 and even 2 where summary spectra only have 1 coord.
       - Fix some issues with Gamma Delux 2d spectrum classes that don't compile
         on 4.x compilers
       - get NSCLAsciiFormatter to properly read rev 2,3 and 'malformed rev2'
         produced by the pre2 version of 3.2.